<resources>
    <string name="app_name">AssignmentApp</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_city">Enter city</string>
    <string name="add_data">Add Data</string>
    <string name="view_data">View Data</string>
    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="please_enter_your_age">Please enter your Age</string>
    <string name="please_enter_your_city">Please enter your City</string>
    <string name="password_validation_error">Password must be 7 Characters with 1UpperCase Alphabet and 1SpecialCharacter and Numeric.</string>
    <string name="no_data_found">No data found</string>
</resources>